src/app.scss
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,900;1,400;1,900&family=Passion+One:wght@400;900&family=Raleway:ital,wght@0,100;0,400;0,800;1,400;1,500&family=Young+Serif&display=swap');

// Add global colors and typography here
:root {
	--primary-color: #519fac;
	--secondary-color: #0a5060;
	--tertiary-color: #bb7950;
	--dark-font: #0a5060;
	--light-font: #f9ffa8;
}

html {
	font-size: 62.5%;
	font-size: 1.2rem;

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		font-family: 'Young Serif', serif;
		color: var(--dark-font);
	}

	body {
		margin: 0;
		font-family: 'Raleway', sans-serif;
	}
}

.content-container {
	max-width: 1200px;
	margin: 0 auto;
	padding: 1rem;
}

